Bug 128353 - Impress: Animated video GIF do not play anymore in GDI - OK with Shift+F5 on slide (OK in OpenGL or Skia)
Summary: Impress: Animated video GIF do not play anymore in GDI - OK with Shift+F5 on ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Windows (All)
: high normal
Assignee: Miklos Vajna
URL: https://c.web.de/@337134511747766680/...
Whiteboard: target:7.2.0 target:7.1.0.2
Keywords: bibisected, regression
: 126570 131144 131310 (view as bug list)
Depends on:
Blocks: Images-Animated
  Show dependency treegraph
 
Reported: 2019-10-23 16:20 UTC by Hans Zekl
Modified: 2021-02-19 10:55 UTC (History)
12 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample file (1.64 MB, application/vnd.oasis.opendocument.presentation)
2019-11-08 12:22 UTC, Xisco Faulí
Details
128353 - Impress - OpenGL disabled (3.12 MB, video/x-matroska)
2020-06-09 10:43 UTC, Mike
Details
128353 - Impress - OpenGL enabled (2.02 MB, video/x-matroska)
2020-06-09 10:44 UTC, Mike
Details
Example file without GIF (779.65 KB, application/vnd.oasis.opendocument.presentation)
2020-06-10 18:35 UTC, Telesto
Details
Bibisect log (2.75 KB, text/plain)
2020-06-10 18:37 UTC, Telesto
Details
Screencast GDI mode LibO7.2 Master (1015.31 KB, video/mp4)
2021-01-08 13:04 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hans Zekl 2019-10-23 16:20:36 UTC
Description:
I provided a short example which contains the bug:
https://c.web.de/@337134511747766680/6cT9IDhPSOGdydOedT3Ieg

Additionally I provided both videos with this Links

Systeminformation: Windows 8.1, latest release and updates, Memory 8 GB

Steps to Reproduce:
Using the provided Impress-file proceed as follows:
1.Start the presentation with the first page. The animated GIF does not run, but when in edit mode
2.Start presentation with page 3, video runs
3.Start with page 2, and proceed to page 3, video flashes shortly then area is black.
4. Start with page 5, two videos are running
5. Start with page 4 and proceed to page 5, only the lower video runs which is the second one which I copied to the page.
4.Create another page and copy the WMF-file into it

Actual Results:
See above

Expected Results:
See above


Reproducible: Always


User Profile Reset: No



Additional Info:
Presentation worked in version 6.0

The same error occurs on my laptop with Windows 10, Version 18.09, too.

These error occur when OpenGL is disabled. When enabled, the animated GIF runs, but the single video does not run and shows the first frame.
Comment 1 Xisco Faulí 2019-11-08 12:21:44 UTC
it does work in

Version: 6.4.0.0.alpha1+
Build ID: 498c2d3944b666c2f016b65903001920db2cb2a4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Could you please paste the info from Help - about LibreOffice ?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' once the information has been provided
Comment 2 Xisco Faulí 2019-11-08 12:22:13 UTC
Created attachment 155635 [details]
sample file
Comment 3 Hans Zekl 2019-11-08 15:22:16 UTC
Info from 'About LibreOffice':

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 6.3; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 4 Durgapriyanka 2019-11-13 17:09:25 UTC
Cannot reproduce in

Version: 6.4.0.0.alpha1+ (x86)
Build ID: ec7374ff84c71edfbb30d6e4dc5b486b6df7107f
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-11-10_21:37:30
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

and 

In version 3.3, none of the video plays.
Comment 5 Hans Zekl 2019-11-15 12:37:21 UTC
Installed Version 6.3.3
Version: 6.3.3.2 (x64)
Build-ID: a64200df03143b798afd1ec74a12ab50359878ed
CPU-Threads: 4; BS: Windows 6.3; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

Get the same error.

One additional note: starting with the first page, I cannot proceed to the second page, not by hitting the return button nor by clicking the right mouse button and selecting 'next page'.
Comment 6 Hans Zekl 2019-11-15 13:21:45 UTC
Activated OpenGL: The the first page runs, but the other animations don not work anymore. Only still images are shown but the black field disappeared.
Comment 7 Buovjaga 2020-04-26 15:26:57 UTC
Animated gif works for me in presentation mode on Windows. At first I thought there was a problem, but there was just a delay - maybe due to me using a virtual machine.

Videos also work.

Ensure that for videos you have codecs installed like https://github.com/Nevcairiel/LAVFilters/releases

Version: 7.0.0.0.alpha0+ (x64)Build ID: 5063669a17538ea353e34ab0990363399d34f4f4CPU threads: 4; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; Locale: fi-FI (fi_FI); UI-Language: en-USCalc: threaded
Comment 8 Mike 2020-06-08 20:46:44 UTC
I can reproduce all issues, if OpenGL is disabled and LO runs on Win.

a) The animated GIF in the first slide 
OpenGL off: issue like reported
OpenGL on: GIF is always animated

b) WMV on slide 3
Open GL off: issue like reported
OpenGL on: WMV doesn't run, there is only a still

c) One WMV runs, the other not
OpenGL off: issue like reported
OpenGL on: both WMV don't run

Version: 6.4.4.2 (x64)
Build-ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU-Threads: 4; BS: Windows 10.0 Build 18363; UI-Render: GL; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: CL



Ubuntu: No Problems (VM in VBox, OpenGL? I did not find info on this in about windows or in settings->view the information, if OpenGL is activated or not (like LO on Win))

Version: 6.4.2.2
Build ID: 1:6.4.2-0ubuntu3
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: en-US (de_DE.UTF-8); UI-Language: en-US
Calc: threaded
Comment 9 Mike 2020-06-08 21:16:21 UTC
Okay, I was a little bit quick to set it to new bug, if there are seversl testers, that can`t reproduce this. Sorry. :/ I will add screen casts
Comment 10 Mike 2020-06-09 10:43:48 UTC
Created attachment 161801 [details]
128353 - Impress - OpenGL disabled
Comment 11 Mike 2020-06-09 10:44:23 UTC
Created attachment 161802 [details]
128353 - Impress - OpenGL enabled
Comment 12 Telesto 2020-06-10 10:19:01 UTC
2 bugs in one document.. 

GIF
GDI: Hang/Freeze
Skia Raster/Vulkan: Fine -> Expect

Memory usage is over the roof.. 1,3 GB and more needed.. goes back to 4.0

Playing WMW
GDI/ SKIA Video flashes shortly then area is black. Page 5, only the lower video runs
Comment 13 Telesto 2020-06-10 10:25:42 UTC Comment hidden (obsolete)
Comment 14 Telesto 2020-06-10 18:35:50 UTC
Created attachment 161855 [details]
Example file without GIF
Comment 15 Telesto 2020-06-10 18:37:38 UTC
Created attachment 161856 [details]
Bibisect log

Bisected to non playing WMV in GDI mode to:
author	Miklos Vajna <vmiklos@collabora.com>	2019-04-17 11:38:47 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-04-17 15:43:48 +0200
commit d7f4f5650dd2c7fe1ccec50efd806e695b8bc18a (patch)
tree dac2ee1da1119fe1b1d6ac13f21005847d0ea5d8
parent 0fb575b34d039f7c732820467b6db6f8cebd485d (diff)
tdf#124756 slideshow: avoid mbPaintDisabled for media windows
Commit 3e0092031b73bad107e3122d5d4be2f5bd487744 (tdf#112318 sd opengl:
fix lack of initial animation, 2019-04-05) enabled processing of idle
events between two updates of the slideshow to help OpenGL, which
uncovered a problem with media shapes.

On one hand,
slideshow::internal::ViewMediaShape::implInitializePlayerWindow() calls
EnablePaint(false) on the media window. OTOH,
vcl::Window::ImplCallPaint() handles mbPaintDisabled by invalidating the
relevant area of the window, which causes a paint<->invalidate loop.

Fix the problem by nominally still enabling paints on the media window:
nothing will change in practice (since the actual media overlay will be
on top of it), but this way the loop goes away.

mbPaintDisabled is handled like this since the initial import, the media
window flag was added much later, so it makes more sense to adapt the
later.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d7f4f5650dd2c7fe1ccec50efd806e695b8bc18a
Comment 16 Telesto 2020-06-10 18:38:15 UTC Comment hidden (obsolete)
Comment 17 Miklos Vajna 2020-06-15 08:20:37 UTC Comment hidden (obsolete)
Comment 18 Buovjaga 2020-06-15 09:37:11 UTC
(In reply to Miklos Vajna from comment #17)
> Does this work with Skia?

It even worked *without* Skia for me in comment 7. It worked with Skia for Telesto in comment 12.
Comment 19 Telesto 2020-06-20 18:59:58 UTC
(In reply to Buovjaga from comment #18)

Using example file attachment 161855 [details]
With slide 1 or 3 selected in the slide panel when starting the presentation
-> Slide 2: WMV doesn't run, there is only a still (SKIA)
-> Slide 4: One WMV runs, the other not (SKIA)

If I select slide 2/4 (so one of the slides containing the animation) both run as expected

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 43c60ce1ac7629a1462e927e6ff937469f58f743
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 20 Timur 2020-10-08 06:52:06 UTC
*** Bug 131310 has been marked as a duplicate of this bug. ***
Comment 21 Timur 2020-10-08 06:55:14 UTC
*** Bug 130524 has been marked as a duplicate of this bug. ***
Comment 22 Gerhard Weydt 2020-10-08 17:48:37 UTC
A test document and test results are to be found in bug #131310.
I now tested with daily build
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 64ab07edee8eba531fd05cbc5d92315cc2855e92
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
The behaviour is the same as in 7.0 and 6.4 already described there, i. e. the video plays only when Skia is activated.

My graphic card is Intel HD Graphics 520.
Comment 23 Miklos Vajna 2021-01-06 16:49:54 UTC
(In reply to Telesto from comment #15)
> Bisected to non playing WMV in GDI mode to:


I don't seem to reproduce this on Windows with GDI. Do you still see the problem on master?
Comment 24 Telesto 2021-01-06 19:15:36 UTC
(In reply to Miklos Vajna from comment #23)
> (In reply to Telesto from comment #15)
> > Bisected to non playing WMV in GDI mode to:
> 

1. Open attachment 161855 [details] 
2. Press F5
3. Go through the presentation

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 4e3ce9dd6ace0b22f7b3f45cf2338b201f4dc305
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

Slide 4 most obvious.. There should be 2 videos playing.. but only one.. And text disappears behind kind black square

You can also go through it in Skia Raster mode also not working as expected. There should be playing video's

Not sure if there any codecs involved. I have KLite codec pack installed (default settings)
Comment 25 Miklos Vajna 2021-01-07 16:01:04 UTC
This bug is marked as a bisected regression regarding the Windows GDI rendering. So please let's focus on what is bad with the above commit and what is good with the commit before. I compared the slideshow behavior for slide 5 (the one that contains 2 videos) for the two commits on Windows 10 (with GDI, i.e. SAL_DISABLEGL=1) and I don't see a difference.

I also tried 6.3.5.2 on Windows 7, again both videos are playing on slide 5. Is there anything else I can try?

I also tested that the fixes for bug 112318 and bug 124756 are still needed, so reverting is not a good idea.

I could tweak the above commit to still avoid paining for the media window and then change vcl to not emit invalidations for system child windows when their painting is disabled.. but I don't like blind fixes, it would be good to see the problem locally first. Thanks.
Comment 26 Miklos Vajna 2021-01-08 08:05:21 UTC
Focusing on the animated GIF part, that went wrong with 3e0092031b73bad107e3122d5d4be2f5bd487744 (tdf#112318 sd opengl: fix lack of initial animation, 2019-04-05), focusing on that.
Comment 27 Telesto 2021-01-08 13:04:44 UTC
Created attachment 168759 [details]
Screencast GDI mode LibO7.2 Master
Comment 28 Miklos Vajna 2021-01-08 16:32:27 UTC
Thanks. I guess the GDI case with videos depends on the DX canvas and is HW-specific, so it makes little sense to investigate that further. If your HW has problems with the DX canvas, just revert back to the default (skia).

I'll fix the animgif part, which is something I can reproduce in a debug build or on a slower machine.
Comment 29 Commit Notification 2021-01-08 19:53:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c33dd70aa7a6a5dc28b99f8af123548b02a77884

tdf#128353 sd slideshow: fix handling of animgifs on slower machines

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2021-01-14 07:39:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/0774d315d3151c2cf8b6c01ab1f8c76a52fbb742

tdf#128353 sd slideshow: fix handling of animgifs on slower machines

It will be available in 7.1.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 Buovjaga 2021-02-06 12:33:22 UTC
*** Bug 126570 has been marked as a duplicate of this bug. ***
Comment 32 Timur 2021-02-18 13:54:02 UTC
*** Bug 131144 has been marked as a duplicate of this bug. ***
Comment 33 Timur 2021-02-18 13:58:35 UTC
To folks who had this issue, in this or duplicated bug: please test with daily master or LO 7.1.
And either confirm the fix or that you still have an issue (also add original bug). 
Thanks.
Comment 34 Gerhard Weydt 2021-02-18 18:26:23 UTC Comment hidden (obsolete)
Comment 35 Buovjaga 2021-02-19 05:37:47 UTC
(In reply to Gerhard Weydt from comment #34)
> I tested in 7.0.1.2 and 7.1.1.1, with the same result:
> If the presenter console is off, the video in the presentation  referred to
> in comment #22 plays as it should.
> If the presenter console is on, the video starts on both screens, but stops
> after a short time (less than a second) on the presentation screen, and
> continues to run only in the presenter console.
> I didn't change the status yet, though!

Please see comment 28. Nothing was done for anything related to videos.
Comment 36 Jeff Goodenough 2021-02-19 10:08:44 UTC
If nothing was done in relation to videos, then what is the point of this change? Videos are still not playing, with or without Skia, unless we start on the slide containing the video using Shift/F5 (as per the title of this bug report). The only difference between not using Skia and using it, is that in the former case it displays a black rectangle and in the latter a single, static, frame of the video.
Comment 37 Jeff Goodenough 2021-02-19 10:10:53 UTC
(That was using 7.1 by the way which made no difference. I missed the update initially because it said my 7.0 was up to date when I checked.)
Comment 38 Miklos Vajna 2021-02-19 10:14:42 UTC
This bug is focused on the case where 1) the object is a gif 2) the problem is specific to disabling skia. Is there a problem that is still specific to that case? If not, then please let's close this bug again.

If there are still problems which are about *videos* or also affecting skia, let's have separate bugs for those.

My understanding is that the remaining video problems are depending on the DX canvas with GDI, which is not a regression, the DX driver is not part of LO.

Also, if a problem is happening with skia, then it should be in the skia tracker.

Thanks.

I've now updated the summary to say this explicitly: animgifs and "only with gdi" is the scope of this bug, that's why it's a regression.
Comment 39 Jeff Goodenough 2021-02-19 10:50:40 UTC
In which case, why is my bug report 130524, which is specifically about videos, marked as a duplicate of this one?

Since that one is closed because it's marked as a duplicate, it is no longer being looked at.
Comment 40 Miklos Vajna 2021-02-19 10:53:38 UTC
Fair enough, let me reopen that one and close this. Sorry for the mess! :-)
Comment 41 Jeff Goodenough 2021-02-19 10:55:43 UTC
Many thanks! OInce that is done, I should add a comment to say that (a) it doesn't work with Skia after all, and (b) it's still there with 7.1 release