tdf#128353 sd slideshow: fix handling of animgifs on slower machines

Regression from commit 3e0092031b73bad107e3122d5d4be2f5bd487744
(tdf#112318 sd opengl: fix lack of initial animation, 2019-04-05), the
problem was that in case a timer adds itself to the end of the scheduler
queue during Scheduler::ProcessEventsToIdle(), then the idle trigger in
SlideshowImpl::updateSlideShow() will never finish.

The intention of invoking idles is to help vcl backends which do the
actual painting in an idle, so actually it's enough to only process
tasks which are already scheduled. That is enough for skia/gtk3/etc and
avoids the problem with the animgifs.

This is only a problem in debug builds or on slower machines: the
animgif from the bugdoc wants to play a frame every 40ms, so in case
processing the current tasks finishes faster than that, then the problem
was not visible.

(cherry picked from commit c33dd70aa7a6a5dc28b99f8af123548b02a77884)

Change-Id: I7487cb9a79e7e5acc0b816eb4744a04559ae26ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109107
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>